BAH-4251| Fix.Spacing For Create PatientHeader

--- a/apps/registration/src/pages/createPatientPage/styles/index.module.scss
+++ b/apps/registration/src/pages/createPatientPage/styles/index.module.scss
@@ -5,6 +5,7 @@
   // Patient Details Header
   .patientDetailsHeader {
     margin: 0 auto;
+    margin-top:$spacing-08;
     max-width: 1240px;
     height: 54px;
     box-shadow: 0 2px 6px $shadow;
